--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
+    "@types/node": "^24.1.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-toggle": "^4.0.5",
@@ -42,6 +43,6 @@
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.0.2",
-    "vite": "^7.0.6"
+    "vite": "^5.4.0"
   }
 }
